app/base/skeleton-frontend/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: skeleton-frontend
  labels:
    app: skeleton-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skeleton-frontend
  template:
    metadata:
      labels:
        app: skeleton-frontend
    spec:
      containers:
      - name: skeleton-frontend
        image: skltn/skeleton-frontend:717
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 1
          timeoutSeconds: 1
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          timeoutSeconds: 1
          periodSeconds: 10
        resources:
          requests:
            memory: "8Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "500m"
