app/base/skeleton-frontend/service.yml
kind: Service
apiVersion: v1
metadata:
  name: skeleton-frontend
  labels:
    app: skeleton-frontend
spec:
  type: ClusterIP
  selector:
    app: skeleton-frontend
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
