app/base/skeleton-frontend/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: skeleton-frontend-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: skeleton.lab.software.altkom.pl
    http:
      paths:
      - path: /
        backend:
          serviceName: skeleton-frontend
          servicePort: 80
